Improved color scheme + Improved tooltips + Fixed layout shifts

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,13 @@
 :root {
-    --color-page: #FFFFFF06;
+    --color-page: #FFFFFF08;
+    --color-page-special: #000000CC;
     --font-family-heading: "BrandonGrotesqueBold", sans-serif;
     --font-family-regular: "VarelaRoundRegular", sans-serif;
-    --color-accent: #dddddd;
+    --color-accent: #BBBBBB;
     --color-accent-special: #ffffff;
     --hover-transition-duration: 300ms;
     --border: none;
-    --color-border: #FFFFFF10;
+    --color-border: #ffffff10;
 }
 
 @font-face {
@@ -17,10 +18,6 @@
 @font-face {
     font-family: "VarelaRoundRegular";
     src: url("/fonts/VarelaRoundRegular.woff2");
-}
-
-* {
-    user-select: none;
 }
 
 h1,
@@ -120,9 +117,50 @@ h6 {
     animation-play-state: running;
 }
 
-.icon:hover .tooltip {
+/* .icon:hover .tooltip {
     opacity: 1;
     z-index: 10;
+} */
+
+/* .icon .tooltip {
+    pointer-events: none;
+    background-color: var(--color-page-special);
+    position: fixed;
+    bottom: 100%;
+    right: 0;
+    transition: opacity var(--hover-transition-duration) ease-out;
+    opacity: 0;
+    overflow: hidden;
+    z-index: 100;
+    max-width: 80vw;
+} */
+
+/* .icon .tooltip.left {
+    right: auto;
+    left: 0;
+} */
+
+/* .icon .tooltip.top {
+    top: 100%;
+    bottom: auto;
+} */
+
+/* .tooltip img {
+    border-radius: var(--border-radius);
+} */
+
+.tooltip {
+    position: fixed;
+    pointer-events: none;
+    z-index: 10;
+}
+
+.tooltip.card {
+    background-color: var(--color-page-special);
+}
+
+.tooltip.hidden {
+    display: none;
 }
 
 .icon path {
@@ -132,27 +170,6 @@ h6 {
 
 .icon:hover path {
     fill: var(--color-accent-special);
-}
-
-.icon .tooltip {
-    pointer-events: none;
-    background-color: var(--color-page-special);
-    position: absolute;
-    bottom: 100%;
-    right: 0;
-    transition: opacity var(--hover-transition-duration) ease-out;
-    opacity: 0;
-    overflow: hidden;
-    max-width: 80vw;
-}
-
-.icon .tooltip.left {
-    right: auto;
-    left: 0;
-}
-
-.tooltip img {
-    border-radius: var(--border-radius);
 }
 
 .heart {
@@ -227,4 +244,23 @@ h6 {
     100% {
         transform: scale(1.0);
     }
+}
+
+::-webkit-scrollbar {
+    width: var(--space-small);
+    height: var(--space-small);
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--color-page);
+    border-radius: var(--border-radius);
+}
+
+::-webkit-scrollbar-corner {
+    background-color: var(--color-page-special);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--color-accent-special);
+    border-radius: var(--border-radius);
 }
